[tool.poetry]
name = "chess-backend"
version = "0.1.0"
description = ""
authors = ["Roman Auriti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg = "^3.1.18"
fastapi = {extras = ["all"], version = "^0.110.2"}
pydantic-settings = "^2.2.1"
psycopg-pool = "^3.2.2"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
